# OneMessageCPP

./: CMakeLists.txt  README.md
src/: om.cpp  om.hpp
